--- a/package.json
+++ b/package.json
@@ -20,15 +20,18 @@
     "@unhead/vue": "^2.0.13",
     "@vee-validate/nuxt": "^4.15.1",
     "clsx": "^2.1.1",
+    "echarts": "^6.0.0",
     "eslint": "^9.32.0",
     "nuxt": "^4.0.1",
     "nuxt-auth-utils": "^0.5.23",
+    "nuxt-echarts": "^1.0.0",
     "ofetch": "^1.4.1",
     "pinia": "^3.0.3",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "typescript": "^5.8.3",
     "vue": "^3.5.18",
+    "vue-echarts": "^8.0.0-beta.1",
     "vue-router": "^4.5.1"
   }
 }
