--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxt/scripts": "^0.11.10",
     "@nuxt/test-utils": "^3.19.2",
     "@nuxt/ui": "^3.3.0",
+    "@nuxtjs/proxy": "^2.1.0",
     "@pinia/nuxt": "^0.11.2",
     "@tailwindcss/vite": "^4.1.11",
     "@unhead/vue": "^2.0.13",
